--- a/authuser/src/main/resources/application.yaml
+++ b/authuser/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url:  jdbc:postgresql://localhost:5432/ead-authuser
     username: postgres
-    password: 123456789
+    password: banco123
   jpa:
     hibernate:
       ddl-auto: update
@@ -15,3 +15,19 @@ spring:
     properties:
       hibernate:
         show_sql: true
+  output:
+    ansi:
+      enabled: Always
+
+
+logging:
+  level:
+    com.ead: TRACE
+    root: INFO
+    org.springframework.web: DEBUG
+    org.hibernate: INFO
+
+ead:
+  api:
+    url:
+      course: 'http://localhost:8082'
